[package]
name = "structopt-derive"
version = "0.4.0"
edition = "2018"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
description = "Parse command line argument by defining a struct, derive crate."
documentation = "https://docs.rs/structopt-derive"
repository = "https://github.com/TeXitoi/structopt"
keywords = ["clap", "cli", "derive", "docopt"]
categories = ["command-line-interface"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "TeXitoi/structopt" }

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
proc-macro-error = "0.4.3"

[features]
paw = []

[lib]
proc-macro = true
